feat : enhance MessageService with Request DTO